# internal/routers/r_mall_admin/ums_resource_category_router.go
@@ -9,8 +9,8 @@ package r_mall_admin
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/hongjun500/mall-go/internal/gin_common"
+	"github.com/hongjun500/mall-go/internal/request/admin_dto"
 	"github.com/hongjun500/mall-go/internal/request/base_dto"
-	"github.com/hongjun500/mall-go/internal/request/ums_admin_dto"
 	"github.com/hongjun500/mall-go/internal/services/s_mall_admin"
 )
 
@@ -44,12 +44,12 @@ func (router *UmsResourceCategoryRouter) GroupUmsResourceCategoryRouter(umsResou
 //	@Tags			后台资源分类管理
 //	@Accept			json
 //	@Produce		json
-//	@Param			request	body	ums_admin_dto.UmsResourceCategoryCreateDTO	true	"添加后台资源分类"
+//	@Param			request	body	admin_dto.UmsResourceCategoryCreateDTO	true	"添加后台资源分类"
 //	@Security		GinJWTMiddleware
 //	@Success		200	{object}	gin_common.GinCommonResponse
 //	@Router			/resourceCategory/create [post]
 func (router *UmsResourceCategoryRouter) create(context *gin.Context) {
-	var dto ums_admin_dto.UmsResourceCategoryCreateDTO
+	var dto admin_dto.UmsResourceCategoryCreateDTO
 	err := context.ShouldBind(&dto)
 	if err != nil {
 		gin_common.CreateFail(context, gin_common.ParameterValidationError)
@@ -71,12 +71,12 @@ func (router *UmsResourceCategoryRouter) create(context *gin.Context) {
 //	@Accept			json
 //	@Produce		json
 //	@Param			id		path	int										true	"id"
-//	@Param			request	body	ums_admin_dto.UmsResourceCategoryCreateDTO	true	"修改后台资源分类"
+//	@Param			request	body	admin_dto.UmsResourceCategoryCreateDTO	true	"修改后台资源分类"
 //	@Security		GinJWTMiddleware
 //	@Success		200	{object}	gin_common.GinCommonResponse
 //	@Router			/resourceCategory/update/{id} [post]
 func (router *UmsResourceCategoryRouter) update(context *gin.Context) {
-	var dto ums_admin_dto.UmsResourceCategoryCreateDTO
+	var dto admin_dto.UmsResourceCategoryCreateDTO
 	var pathVariableDTO base_dto.PathVariableDTO
 	err := context.ShouldBind(&dto)
 	err = context.ShouldBindUri(&pathVariableDTO)
